added some admin routes

--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -38,7 +38,7 @@
                     </li>
                 </ul>
                 <span class="navbar-text">
-                    Navbar text with an inline element
+                    keeping your mett organized since 2018
                 </span>
             </div>
             <!-- /.navbar-collapse -->
