--- a/src/app/templates/order.html
+++ b/src/app/templates/order.html
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="form-group col-md-2">
                     <label for="orderAmount">Number of buns</label>
-                    <input type="number" class="form-control" id="orderAmount" name="orderAmount">
+                    <input type="number" step="1" min="0" class="form-control" id="orderAmount" name="orderAmount">
                 </div>
                 <div class="form-group col-md-2">
                     <label for="orderClass">Type of bun</label>
