nearly complete functionality for purchases

--- a/src/app/templates/admin.html
+++ b/src/app/templates/admin.html
@@ -29,6 +29,9 @@
                 <div class="col-md-2">
                     <a class="btn btn-outline-primary" href="/admin/balance">Change user balance</a>
                 </div>
+                <div class="col-md-2">
+                    <a class="btn btn-outline-primary" href="/admin/purchase">Show purchases</a>
+                </div>
             </div>
         </form>
     </div>
