--- a/src/app/templates/order.html
+++ b/src/app/templates/order.html
@@ -24,6 +24,11 @@
                 <button type="submit" value=submit class="btn btn-primary">Order!</button>
             </div>
         </form>
+        <div class="row">
+            <div class="col-md-4">
+                <a class="btn btn-outline-primary" href="/order/purchase">State purchase</a>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
