--- a/src/app/templates/dashboard.html
+++ b/src/app/templates/dashboard.html
@@ -7,9 +7,32 @@
     <div class="container">
         <p><br />Welcome {{ username }}! This is home.<br />Your current balance is {{ balance }}.</p>
 
-        {% if order_exists %}
             <div class="row">
-                <div class="col col-md-2">
+                <div class="col col-md-3">
+                    {% if order_exists %}
+                        <p class="alert">Current Order</p>
+                        <table class="table">
+                            <thead class="thead-light">
+                                <tr>
+                                    <th scope="col">Bun</th>
+                                    <th scope="col">#</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for bun in order %}
+                                    <tr>
+                                        <td scope="row">{{ bun }}</td>
+                                        <td>{{ order[bun] }}</td>
+                                    </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    {% else %}
+                        <p class="alert">There is no current order!</p>
+                    {% endif %}
+                </div>
+                <div class="col col-md-3">
+                    <p class="alert">Order History</p>
                     <table class="table">
                         <thead class="thead-light">
                             <tr>
@@ -18,20 +41,17 @@
                             </tr>
                         </thead>
                         <tbody>
-                            {% for bun in order %}
+                            {% for bun in history %}
                                 <tr>
                                     <td scope="row">{{ bun }}</td>
-                                    <td>{{ order[bun] }}</td>
+                                    <td>{{ history[bun] }}</td>
                                 </tr>
                             {% endfor %}
                         </tbody>
                     </table>
+                    <p class="alert">You have ordered a mean of {{ mean_buns }} buns.</p>
                 </div>
             </div>
-        {% else %}
-            <p class="alert">There is no current order!</p>
-        {% endif %}
-
     </div>
 
 {% endblock %}
