added change to mett formula

--- a/src/app/templates/admin.html
+++ b/src/app/templates/admin.html
@@ -30,6 +30,9 @@
                     <a class="btn btn-outline-primary" href="/admin/balance">Change user balance</a>
                 </div>
                 <div class="col-md-2">
+                    <a class="btn btn-outline-primary" href="/admin/formula">Change mett formula</a>
+                </div>
+                <div class="col-md-2">
                     <a class="btn btn-outline-primary" href="/admin/purchase">Show purchases</a>
                 </div>
             </div>
