--- a/src/app/templates/order.html
+++ b/src/app/templates/order.html
@@ -20,11 +20,33 @@
                             {% endfor %}
                         </select>
                     </div>
-                </div>
-                <div class="row">
-                    <button type="submit" value=submit class="btn btn-primary">Order!</button>
+                    <div class="col-md-2">
+                        <button type="submit" value=submit class="btn btn-primary">Order!</button>
+                    </div>
                 </div>
             </form>
+            <div class="row">
+                <div class="col-md-4">
+                    <p class="alert">Current total order</p>
+                    <table class="table">
+                        <thead class="thead-light">
+                            <tr>
+                                <th scope="col">Bun</th>
+                                <th scope="col">#</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for bun in buns %}
+                                <tr>
+                                    <td scope="row">{{ bun }}</td>
+                                    <td>{{ buns[bun] }}</td>
+                                </tr>
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                    <p class="alert">That makes {{ mett | round }} g of mett.</p>
+                </div>
+            </div>
         {% else %}
             <p class="alert">There is no current order!</p>
         {% endif %}
