--- a/src/app/templates/dashboard.html
+++ b/src/app/templates/dashboard.html
@@ -5,7 +5,7 @@
 {% block body %}
 
     <div class="container">
-        <p><br />Welcome {{ username }}! This is home.<br />Your current balance is {{ balance }}.</p>
+        <p>Welcome {{ username }}! This is home.<br />Your current balance is {{ balance }}.</p>
 
             <div class="row">
                 <div class="col col-md-3">
