added function and form

--- a/src/app/templates/admin.html
+++ b/src/app/templates/admin.html
@@ -38,6 +38,8 @@
                     <br /><br />
                     <a class="btn btn-outline-primary" href="/admin/purchase"><i class="fas fa-list"></i> Show purchases</a>
                     <br /><br />
+                    <a class="btn btn-outline-primary" href="/admin/spare"><i class="fas fa-edit"></i> Assign Spare</a>
+                    <br /><br />
                 </div>
             </div>
         </form>
