--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -19,7 +19,7 @@
 
     <body>
 
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark" role="navigation">
+        <nav class="navbar navbar-expand-md navbar-dark bg-danger" role="navigation">
             <!-- Brand and toggle get grouped for better mobile display -->
             <a class="navbar-brand" href="#">mettinizr</a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#some-navbar">
