--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -37,6 +37,15 @@
                     <li class="nav-item">
                         <a class="nav-link {% if active_page == 'Admin' %} active {% endif %}" href="/admin">Admin</a>
                     </li>
+                    {% if current_user.is_authenticated %}
+                        <li class="nav-item">
+                            <a class="nav-link {% if active_page == 'Logout' %} active {% endif %}" href="/logout">Logout</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="nav-link {% if active_page == 'Login' %} active {% endif %}" href="/login">Login</a>
+                        </li>
+                    {% endif %}
                 </ul>
                 <span class="navbar-text">
                     keeping your mett organized since 2018
