Working profile page with password prompt

--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -38,8 +38,14 @@
                         <a class="nav-link {% if active_page == 'Admin' %} active {% endif %}" href="/admin">Admin</a>
                     </li>
                     {% if current_user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link {% if active_page == 'Logout' %} active {% endif %}" href="/logout">Logout</a>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                {{ current_user.email }}
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <a class="dropdown-item" href="/profile">Profile</a>
+                                <a class="dropdown-item" href="/logout">Logout</a>
+                            </div>
                         </li>
                     {% else %}
                         <li class="nav-item">
