--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -60,12 +60,30 @@
             <!-- /.navbar-collapse -->
         </nav>
 
-    <div class="container-fluid">
+        <!-- flash messages -->
+        {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+            <div class="row" style="padding: 0">
+                <div class="col-xs-12">
+                    {% for category, message in messages %}
+                        <div style="padding: 15px; margin-bottom: -15px">
+                            {% set flash_categories = ['danger', 'warning', 'info', 'success'] %}
+                            <div class="alert alert-{{ category if category in flash_categories else 'danger' }} alert-dismissible" role="alert">
+                                {{ message }}
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+            {% endif %}
+        {% endwith %}
 
-        <br /><br />
+        <div class="container-fluid">
 
-        {% block body %}{% endblock %}
-    </div>
+            <br /><br />
+
+            {% block body %}{% endblock %}
+        </div>
 
     </body>
 </html>
