--- a/src/app/templates/base.html
+++ b/src/app/templates/base.html
@@ -65,25 +65,23 @@
             <!-- /.navbar-collapse -->
         </nav>
 
-        <!-- flash messages -->
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
-            <div class="row" style="padding: 0">
-                <div class="col-xs-12">
-                    {% for category, message in messages %}
-                        <div style="padding: 15px; margin-bottom: -15px">
-                            {% set flash_categories = ['danger', 'warning', 'info', 'success'] %}
-                            <div class="alert alert-{{ category if category in flash_categories else 'danger' }} alert-dismissible" role="alert">
+        <div class="container-fluid">
+
+            <!-- flash messages -->
+            {% with messages = get_flashed_messages(with_categories=true) %}
+                {% if messages %}
+                <div class="row">
+                    <div class="col-sm">
+                        {% for category, message in messages %}
+                            {% set flash_categories = ['danger', 'warning', 'primary', 'success'] %}
+                            <div class="alert alert-{{ category if category in flash_categories else 'primary' }} alert-dismissible" role="alert">
                                 {{ message }}
                             </div>
-                        </div>
-                    {% endfor %}
+                        {% endfor %}
+                    </div>
                 </div>
-            </div>
-            {% endif %}
-        {% endwith %}
-
-        <div class="container-fluid">
+                {% endif %}
+            {% endwith %}
 
             <br /><br />
 
