--- a/src/app/templates/order.html
+++ b/src/app/templates/order.html
@@ -54,7 +54,7 @@
         {% endif %}
         <div class="row">
             <div class="col-md-4">
-                <a class="btn btn-outline-primary" href="/order/purchase"><i class="fas fa-shopping-basket"></i> State purchase</a>
+                <a class="btn btn-outline-primary" href="{{ url_for("order/purchase") }}"><i class="fas fa-shopping-basket"></i> State purchase</a>
             </div>
         </div>
     </div>
